data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_162.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\69\6d"
    "\70\6f\72\74\65\64\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\0a\98\80\80\80\00\01\92\80\80\80"
    "\00\00\02\7f\10\00\02\40\02\40\0c\01\0b\0b\41\2a"
    "\0b\1a\0b"
  )
""
)